# pixie-pi

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  lib.rs  main.rs  render.rs
src/compat/: claude.rs  mod.rs
src/modes/: interactive.rs  mod.rs  print.rs  stream_json.rs
src/tools/: bash.rs
tests/: sdk_smoke.rs
