[package]
name = "pixie-pi"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["white1or1black"]
description = "pixie-pi — an AI coding agent (read/write/edit/bash/grep/find/ls tools) for the command line and an interactive REPL."
license = "MIT"
repository = "https://github.com/white1or1black/pixie-pi"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pixie-pi"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# http client (rustls so we don't depend on system openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
bytes = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cli
clap = { version = "4", features = ["derive", "wrap_help", "string"] }

# tools: searching / globbing (gitignore-aware, like rg/fd)
regex = "1"
ignore = "0.4"
globset = "0.4"
walkdir = "2"
# NFKC for fuzzy-match normalization in the edit tool (mirrors pi's normalizeForFuzzyMatch).
unicode-normalization = "0.1"

# interactive terminal
rustyline = "14"

# misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
shell-words = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
